--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -8,3 +8,9 @@ minecraft_version=1.21.6
 parchment_mappings=2025.06.01
 parchment_minecraft_version=1.21.5
 loader_version=0.16.14
+
+publishing.skip_files=true
+publishing.platform=fabric
+publishing.modrinth.loaders=fabric
+publishing.modrinth.version.start=1.21
+publishing.modrinth.version.end=latest
