Write changelog to github output instead of stdout

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,12 +29,19 @@ jobs:
       - name: Extract changelog
         id: changelog
         run: |
+          OUTPUT_DELIMITER="$(uuidgen)"
+          echo "changelog<<$OUTPUT_DELIMITER" >> "$GITHUB_OUTPUT"
+          
+          # extract tag name and use it to get changelog section
           TAG_NAME="v$(./gradlew -q --no-daemon printVersion)"
           awk -v tag="${TAG_NAME}" '
             $1 == "!!!!!" && $2 == tag {found=1; next}
             $1 == "!!!!!" && found {exit}
             found
-          ' CHANGELOG.md
+          ' CHANGELOG.md >> "$GITHUB_OUTPUT"
+          
+          # end output
+          echo "$OUTPUT_DELIMITER" >> "$GITHUB_OUTPUT"
 
       - name: Publish plugin
         env:
