--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx2000m
 
 # TODO UPDATE
 fullVersion=2.9.0
-snapshot=false
+snapshot=true
 
 publishing.display_name=PacketEvents
-publishing.modrinth.project=eAqNJSbO
+publishing.modrinth.project=HYKaKraK
