--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx2000m
 
 # TODO UPDATE
-fullVersion=2.9.1
+fullVersion=2.9.0
 snapshot=true
 
 publishing.display_name=PacketEvents
-publishing.modrinth.project=eAqNJSbO
+publishing.modrinth.project=HYKaKraK
