--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -6,7 +6,7 @@ jetbrains-annotations = "23.0.0"
 via-version = "4.5.0"
 protocol-support = "3d24efeda6"
 bstats = "3.1.0"
-paper = "1.20.6-R0.1-SNAPSHOT"
+paper = "1.21.9-rc1-R0.1-SNAPSHOT"
 bungeecord = "1.21-R0.1"
 velocity = "3.4.0-SNAPSHOT"
 fabric-loom = "1.11.4"
