--- a/testlibs.versions.toml
+++ b/testlibs.versions.toml
@@ -1,10 +1,12 @@
 [versions]
-mockbukkit = "4.72.2"
+mockbukkit = "4.79.0"
+paper = "1.21.8-R0.1-SNAPSHOT"
 slf4j = "2.0.16"
 junit = "5.11.2"
 
 [libraries]
 mockbukkit = { group = "org.mockbukkit.mockbukkit", name = "mockbukkit-v1.21", version.ref = "mockbukkit" }
+paper-api = { group = "io.papermc.paper", name = "paper-api", version.ref = "paper"}
 slf4j = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j" }
 junit-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
 junit-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit" }
