--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -10,13 +10,13 @@ jobs:
       contents: read
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
 
       - name: Validate gradle wrapper
-        uses: gradle/actions/wrapper-validation@v4
+        uses: gradle/actions/wrapper-validation@v5
 
       - name: Set up JDK 21
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v5
         with:
           java-version: '21'
           distribution: 'temurin'
@@ -27,54 +27,44 @@ jobs:
       - name: Build with Gradle
         run: chmod +x gradlew && ./gradlew build
 
-      - name: Copy Final JARs
-        run: |
-          cp build/libs/packetevents-api-*.jar api/build/libs/
-          cp build/libs/packetevents-spigot-*.jar spigot/build/libs/
-          cp build/libs/packetevents-netty-common-*.jar netty-common/build/libs/
-          cp build/libs/packetevents-bungeecord-*.jar bungeecord/build/libs/
-          cp build/libs/packetevents-velocity-*.jar velocity/build/libs/
-          cp build/libs/packetevents-fabric-*.jar fabric/build/libs/
-          cp build/libs/packetevents-sponge-*.jar sponge/build/libs/  
-
       - name: Upload build artifacts api
         uses: actions/upload-artifact@v4
         with:
           name: api-build
-          path: api/build/libs
+          path: build/libs/packetevents-api-*.jar
 
       - name: Upload build artifacts spigot
         uses: actions/upload-artifact@v4
         with:
           name: spigot-build
-          path: spigot/build/libs
+          path: build/libs/packetevents-spigot-*.jar
 
       - name: Upload build artifacts netty-common
         uses: actions/upload-artifact@v4
         with:
           name: netty-common-build
-          path: netty-common/build/libs
+          path: build/libs/packetevents-netty-common-*.jar
 
       - name: Upload build artifacts bungeecord
         uses: actions/upload-artifact@v4
         with:
           name: bungeecord-build
-          path: bungeecord/build/libs
+          path: build/libs/packetevents-bungeecord-*.jar
 
       - name: Upload build artifacts velocity
         uses: actions/upload-artifact@v4
         with:
           name: velocity-build
-          path: velocity/build/libs
+          path: build/libs/packetevents-velocity-*.jar
 
       - name: Upload build artifacts fabric
         uses: actions/upload-artifact@v4
         with:
           name: fabric-build
-          path: fabric/build/libs
+          path: build/libs/packetevents-fabric-*.jar
 
       - name: Upload build artifacts sponge
         uses: actions/upload-artifact@v4
         with:
           name: sponge-build
-          path: sponge/build/libs
+          path: build/libs/packetevents-sponge-*.jar
